# galacticpirateradio-site

./: Cargo.toml  LICENSE  Makefile
data/: recent_transmissions.json
src/: main.rs
static/: Ethereal Waves - Release Notes.md  Ethereal Waves - Release Notes.txt  styles.css
templates/: 404.html  base.html  ethereal_waves_changelog.html  etherealwaves.html  index.html  software.html
