[package]
name = "galacticpirateradio_site"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = "0.8.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6.2", features = ["fs"] }
